[gd_scene load_steps=6 format=4 uid="uid://bbpthe7vqgkyb"]

[ext_resource type="PackedScene" uid="uid://b46qouyu3lx2m" path="res://scenes/windows/window_base.tscn" id="1"]
[ext_resource type="Script" uid="uid://d0a204v3jwpwq" path="res://scenes/windows/window_inventory.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://dejb45q4pyj4v" path="res://textures/icons/library.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co5icrrrwscgg" path="res://scenes/input_container.tscn" id="4"]
[ext_resource type="PackedScene" uid="uid://b4efojcll7i7" path="res://scenes/output_container.tscn" id="5"]

[node name="WindowBase" instance=ExtResource("1")]
offset_bottom = 134.0
script = ExtResource("2")
window = "repository"

[node name="Icon" parent="TitlePanel/TitleContainer" index="0"]
texture = ExtResource("3")

[node name="Title" parent="TitlePanel/TitleContainer" index="1"]
text = "Repository"

[node name="MainContainer" type="VBoxContainer" parent="PanelContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="Input" type="VBoxContainer" parent="PanelContainer/MainContainer" index="0"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="0" parent="PanelContainer/MainContainer/Input" index="0" node_paths=PackedStringArray("exporting") instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_element"
override_connector = "triangle_down"
override_color = "white"
exporting = [NodePath("../../Output/0"), NodePath("../../Output/1"), NodePath("../../Output/2"), NodePath("../../Output/3"), NodePath("../../Output/4")]

[node name="1" parent="PanelContainer/MainContainer/Input" index="1" node_paths=PackedStringArray("exporting") instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_element"
override_connector = "triangle_down"
override_color = "white"
exporting = [NodePath("../../Output/0"), NodePath("../../Output/1"), NodePath("../../Output/2"), NodePath("../../Output/3"), NodePath("../../Output/4")]

[node name="2" parent="PanelContainer/MainContainer/Input" index="2" node_paths=PackedStringArray("exporting") instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_element"
override_connector = "triangle_down"
override_color = "white"
exporting = [NodePath("../../Output/0"), NodePath("../../Output/1"), NodePath("../../Output/2"), NodePath("../../Output/3"), NodePath("../../Output/4")]

[node name="3" parent="PanelContainer/MainContainer/Input" index="3" node_paths=PackedStringArray("exporting") instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_element"
override_connector = "triangle_down"
override_color = "white"
exporting = [NodePath("../../Output/0"), NodePath("../../Output/1"), NodePath("../../Output/2"), NodePath("../../Output/3"), NodePath("../../Output/4")]

[node name="4" parent="PanelContainer/MainContainer/Input" index="4" node_paths=PackedStringArray("exporting") instance=ExtResource("4")]
layout_mode = 2
placeholder_name = "input_element"
override_connector = "triangle_down"
override_color = "white"
exporting = [NodePath("../../Output/0"), NodePath("../../Output/1"), NodePath("../../Output/2"), NodePath("../../Output/3"), NodePath("../../Output/4")]

[node name="Output" type="VBoxContainer" parent="PanelContainer/MainContainer" index="1"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[node name="0" parent="PanelContainer/MainContainer/Output" index="0" instance=ExtResource("5")]
layout_mode = 2

[node name="1" parent="PanelContainer/MainContainer/Output" index="1" instance=ExtResource("5")]
layout_mode = 2

[node name="2" parent="PanelContainer/MainContainer/Output" index="2" instance=ExtResource("5")]
layout_mode = 2

[node name="3" parent="PanelContainer/MainContainer/Output" index="3" instance=ExtResource("5")]
layout_mode = 2

[node name="4" parent="PanelContainer/MainContainer/Output" index="4" instance=ExtResource("5")]
layout_mode = 2

[connection signal="connection_in_set" from="PanelContainer/MainContainer/Input/0" to="." method="_on_connection_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/Input/0" to="." method="_on_0_resource_set"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/Input/1" to="." method="_on_connection_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/Input/1" to="." method="_on_1_resource_set"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/Input/2" to="." method="_on_connection_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/Input/2" to="." method="_on_2_resource_set"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/Input/3" to="." method="_on_connection_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/Input/3" to="." method="_on_3_resource_set"]
[connection signal="connection_in_set" from="PanelContainer/MainContainer/Input/4" to="." method="_on_connection_set"]
[connection signal="resource_set" from="PanelContainer/MainContainer/Input/4" to="." method="_on_4_resource_set"]
